# libphoenix

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.arm  Makefile.armv7  Makefile.armv7a  Makefile.armv7m  Makefile.common  Makefile.host  Makefile.ia32  Makefile.riscv64  Makefile.rules  Makefile.targets  README.md  _ansi.h  _start.c  _startc.c  arch.h  assert.h  build-core-arm-imx6ull.sh  build-core-armv7-imxrt.sh  build-core-armv7-stm32.sh  build-core-armv7a7-imx6ull.sh  build-core-armv7a9-zynq7000.sh  build-core-armv7m4-stm32l4x6.sh  build-core-armv7m7-imxrt105x.sh  build-core-armv7m7-imxrt106x.sh  build-core-armv7m7-imxrt117x.sh  build-core-host-generic.sh  build-core-host-pc.sh  build-core-ia32-generic.sh  build-core-ia32-qemu.sh  build-core-imx6ull.sh  build-core-riscv64-generic.sh  build-core-riscv64-spike.sh  build-core-riscv64-virt.sh  build-core-stm32.sh  build-core.sh  build.sh  (+56 more)
libm/libmcs/: .clang-format  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  COPYING.md  CREDITS.md  Dockerfile  Makefile.in  README.md  configure  pyproject.toml
libm/libmcs/LICENSES/: GTDGmbH.md  NetBSD.md  PublicDomain.md  RedHat.md  RichFelker.md  SunMicrosystems.md
libm/libmcs/doc/: index.html
libm/libmcs/doc/sdd/: 1_Introduction.rst  2_Applicable_and_Reference_Documents.rst  3_Abbreviations.rst  4_Software_Design_Overview.rst  6_Requirements_to_Design_Components_Traceability.rst  conf.py  (+1 more)
libm/libmcs/sw-quality/: co-gcc.lnt  co-gcc.mak  gcc-include-path.lnt  lint.sh  lint_cmac.h  lint_cppmac.h  options.lnt  size-options.lnt  sqarg-config.toml  std.lnt
(+1000 files in other folders)
