[tool.poetry]
name = "libmcs"
version = "1.3.0"
description = "Qualified Mathematical Library for Critical Systems, based on Newlib"
authors = ["GTD GmbH <libmcs@gtd-gmbh.de>"]
license = "BSD"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sphinx-rtd-theme = "^3.0.1"
sphinx-mathjax-offline = "^0.0.2"
hawkmoth = "^0.19.0"
clang = "^14.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
